docs/cyclonedds-cxx/0.9.1/_sources/ddscxx_api_docs/file__home_vsts_work_1_s_repos_cyclonedds-cxx_src_ddscxx_tests_data_Serialization.idl.rst.txt

.. _file__home_vsts_work_1_s_repos_cyclonedds-cxx_src_ddscxx_tests_data_Serialization.idl:

File Serialization.idl
======================

|exhale_lsh| :ref:`Parent directory <dir__home_vsts_work_1_s_repos_cyclonedds-cxx_src_ddscxx_tests_data>` (``/home/vsts/work/1/s/repos/cyclonedds-cxx/src/ddscxx/tests/data``)

.. |exhale_lsh| unicode:: U+021B0 .. UPWARDS ARROW WITH TIP LEFTWARDS

.. contents:: Contents
   :local:
   :backlinks: none

Definition (``/home/vsts/work/1/s/repos/cyclonedds-cxx/src/ddscxx/tests/data/Serialization.idl``)
-------------------------------------------------------------------------------------------------


.. toctree::
   :maxdepth: 1

   program_listing_file__home_vsts_work_1_s_repos_cyclonedds-cxx_src_ddscxx_tests_data_Serialization.idl.rst










Namespaces
----------


- :ref:`namespace_Bounded`

- :ref:`namespace_Endianness`

- :ref:`namespace_Keyhash`

- :ref:`namespace_UnBounded`


Classes
-------


- :ref:`exhale_struct_structBounded_1_1Msg`

- :ref:`exhale_struct_structEndianness_1_1Enums`

- :ref:`exhale_struct_structEndianness_1_1Msg`

- :ref:`exhale_struct_structEndianness_1_1SeqEnums`

- :ref:`exhale_struct_structEndianness_1_1Seqs`

- :ref:`exhale_struct_structEndianness_1_1UnionStr`

- :ref:`exhale_struct_structKeyhash_1_1BStringKey`

- :ref:`exhale_struct_structKeyhash_1_1LargeKey`

- :ref:`exhale_struct_structKeyhash_1_1NoKey`

- :ref:`exhale_struct_structKeyhash_1_1SmallKey`

- :ref:`exhale_struct_structKeyhash_1_1StringKey`

- :ref:`exhale_struct_structUnBounded_1_1Msg`


Enums
-----


- :ref:`exhale_enum_Serialization_8idl_1ac7312fd66d777ccc4658edfd12706ae6`


Unions
------


- :ref:`exhale_union_unionEndianness_1_1U`

